fixing path bugs

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </a>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <a href="javascript: TRANSLATION.redirect('/projects/architecture.html')">
+                <a href="javascript: TRANSLATION.redirect('projects/architecture.html')">
                     <div class="w3-display-container" style="border:2px solid black">
                         <div id="architecture" class="project-title w3-display-topleft w3-padding">Architecture</div>
                         <img src="img/projects-main-images/architecture.jpg" alt="House" style="width:100%;">
@@ -67,7 +67,7 @@
                 </a>
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
-                <a href="javascript: TRANSLATION.redirect('/projects/projectile-motion.html')">
+                <a href="javascript: TRANSLATION.redirect('projects/projectile-motion.html')">
                     <div class="w3-display-container" style="border:2px solid black">
                         <div id="projectile-motion" class="project-title w3-display-topleft w3-padding">Projectile
                             Motion</div>
