--- a/projects/architecture.html
+++ b/projects/architecture.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/w3.css">
     <link rel="stylesheet" href="../css/style.css">
-    <script src="/js/translation.js"></script>
-    <script src="/components/navbar.js"></script>
+    <script src="../js/translation.js"></script>
+    <script src="../components/navbar.js"></script>
 </head>
 
 <body>
