--- a/projects/architecture.html
+++ b/projects/architecture.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
-    <title>Architecture</title>
+    <title id="title">Architecture</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/w3.css">
@@ -48,7 +48,7 @@
                 <p></p>
             </div>
             <iframe id="scene" class="w3-col l8" src="./src/architecture-application.html" height="500"
-                style="border:2px solid black;"></iframe>
+                    style="border:2px solid black;"></iframe>
             <script>
                 // iOS iframe auto-resize workaround
 
@@ -73,7 +73,7 @@
 
                 <a href="./src/architecture-application.html" target="_" style="text-decoration: none;">
                     <div class="more-modes w3-display-container"
-                        style="background: url('img/Architecture/blur.jpg') center;">
+                         style="background: url('img/Architecture/blur.jpg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/fullscreen-icon.png" alt="fullscreen" style="width: 64px;" />
                             <br />
@@ -86,7 +86,7 @@
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
                 <a href="./src/architecture-AR.html" target="_" style="text-decoration: none;">
                     <div class="more-modes w3-display-container"
-                        style="background: url('img/Architecture/blur-AR.jpg') center;">
+                         style="background: url('img/Architecture/blur-AR.jpg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/ar-icon.png" alt="Augmented Reality" style="width: 64px;" />
                             <br />
@@ -97,18 +97,18 @@
 
                 <p class="more-modes-text">
                     <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
-                <div id="warning-fiducial">
-                    You must print a fiducial marker to use Augmented Reality mode (<a href="data/markers/hiro.png"
-                        target="_blank">click here</a> to
-                    download).
-                </div>
+                    <div id="warning-fiducial">
+                        You must print a fiducial marker to use Augmented Reality mode (<a href="data/markers/hiro.png"
+                                                                                           target="_blank">click here</a> to
+                        download).
+                    </div>
                 </p>
             </div>
 
             <div class="w3-col l3 m6 w3-margin-bottom w3-margin-top">
                 <a href="./src/architecture-application-VR.html" target="_" style="text-decoration: none;">
                     <div class="more-modes w3-display-container"
-                        style="background: url('img/Architecture/blur-VR.jpg') center;">
+                         style="background: url('img/Architecture/blur-VR.jpg') center;">
                         <div class="w3-padding" style="width:100%">
                             <img src="img/icons/vr-icon.png" alt="Augmented Reality" style="width: 64px;" />
                             <br />
@@ -119,19 +119,19 @@
 
                 <p class="more-modes-text">
                     <img src="img/icons/alert.png" alt="alert" style="height: 32px;">
-                <div id="warning-hmd-1">
-                    In order to fully experiece the VR mode, it is required one HMD (head-mounted display) and one
-                    joystick even
-                    though it is possible to use the app without those equipments.
-                </div>
+                    <div id="warning-hmd-1">
+                        In order to fully experiece the VR mode, it is required one HMD (head-mounted display) and one
+                        joystick even
+                        though it is possible to use the app without those equipments.
+                    </div>
                 </p>
                 <p class="more-modes-text">
-                <div id="warning-hmd-2">
-                    Using mobile devices, press the VR button in bottom right conner before inserting your device in the
-                    HMD. A circle will move as you look around and you can teleport to that circle pressing any joystick
-                    button. Alternatively, it is also possible to teleport pressisng the spacebar or touching the screen
-                    if your device is sensitive to touch.
-                </div>
+                    <div id="warning-hmd-2">
+                        Using mobile devices, press the VR button in bottom right conner before inserting your device in the
+                        HMD. A circle will move as you look around and you can teleport to that circle pressing any joystick
+                        button. Alternatively, it is also possible to teleport pressisng the spacebar or touching the screen
+                        if your device is sensitive to touch.
+                    </div>
                 </p>
 
             </div>
@@ -152,35 +152,37 @@
             <img class="slide " src="./img/Architecture/example-VR.jpg" onclick="openModal(3)">
 
             <button id="btn-left " class="w3-button w3-black w3-display-left w3-hide-large "
-                onclick="plusDivs(-1) ">&#10094;</button>
+                    onclick="plusDivs(-1) ">
+                &#10094;
+            </button>
             <button class="w3-button w3-black w3-display-right w3-hide-large " onclick="plusDivs(1) ">&#10095;</button>
         </div>
 
         <div id="modal-slideshow" class="w3-modal w3-black">
             <div class="w3-content w3-center" style="height: 80%;">
                 <img class="slide-modal w3-display-middle" src="./img/Architecture/screenshot1-AR.jpg"
-                    style="height: 100%;">
+                     style="height: 100%;">
                 <img class="slide-modal w3-display-middle" src="./img/Architecture/screenshot2-AR.jpg"
-                    style="height: 100%;">
+                     style="height: 100%;">
                 <img class="slide-modal w3-display-middle" src="./img/Architecture/example-VR.jpg"
-                    style="height: 100%;">
+                     style="height: 100%;">
 
                 <span class="w3-black w3-text-white w3-opacity w3-display-left w3-btn" onclick="plusModal(-1)">❮</span>
                 <span class="w3-black w3-text-white w3-opacity w3-display-right w3-btn" onclick="plusModal(1)">❯</span>
             </div>
 
-            <span
-                class="w3-black w3-text-white w3-opacity w3-xxlarge w3-hover-text-grey w3-container w3-display-topright"
-                onclick="closeModal()" style="cursor:pointer">×</span>
+            <span class="w3-black w3-text-white w3-opacity w3-xxlarge w3-hover-text-grey w3-container w3-display-topright"
+                  onclick="closeModal()" style="cursor:pointer">×</span>
         </div>
 
         <!-- End page content -->
     </div>
 
-    <!-- Footer -->
     <footer class="w3-center w3-black w3-padding-16 ">
-        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp " title="W3.CSS " target="_blank "
-                class="w3-hover-text-green ">w3.css</a></p>
+        <h5 id="bottom"><b>Powered by:</b></h5>
+
+        <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank "
+           class="w3-hover-text-green ">w3.css</a>
     </footer>
     <script src="../js/script.js"></script>
     <script>
@@ -193,29 +195,29 @@
         TRANSLATION.add(
             '#p1',
             `When architects present their ideas for the customers, they usually present their architectural plans
-            and sketches to the customers. However, the customers may not actually understand the plans, as often
-            they are laypeople, and
-            the sketches are limited in how well they can represent a real house. It would be easier for common
-            people to understand all of those plans and sketches if there were also a 3D representation of the
-            building where they could walk through, mostly if it was in Virtual Reality`,
+                and sketches to the customers. However, the customers may not actually understand the plans, as often
+                they are laypeople, and
+                the sketches are limited in how well they can represent a real house. It would be easier for common
+                people to understand all of those plans and sketches if there were also a 3D representation of the
+                building where they could walk through, mostly if it was in Virtual Reality`,
 
             `Para apresentar suas ideias aos clientes, os arquitetos costumam usar suas plantas e esboços. No entanto,
-            os clientes podem não entender de fato os planos, pois sao, frequentemente, leigos e os esboços são limitados
-            em quão bem eles podem representar uma casa de verdade. Seria mais fácil para as pessoas comuns entenderem todos
-            esses planos e esboços se houvesse também uma representação 3D da construação pela qual eles pudessem andar, ainda
-            mais se fosse em Realidade Virtual.`
+                os clientes podem não entender de fato os planos, pois sao, frequentemente, leigos e os esboços são limitados
+                em quão bem eles podem representar uma casa de verdade. Seria mais fácil para as pessoas comuns entenderem todos
+                esses planos e esboços se houvesse também uma representação 3D da construação pela qual eles pudessem andar, ainda
+                mais se fosse em Realidade Virtual.`
         );
 
         TRANSLATION.add(
             '#p2',
             ` Architects often have 3D modeling skills already, but the various software they use to build their
-            models usually do not have support for ease navigation nor augmented and virtual reality (AR and VR).
-            This apps aims to solve that problem, supplying the 3D navigation and the AR and VR support for the
-            already created 3D model.`,
+                models usually do not have support for ease navigation nor augmented and virtual reality (AR and VR).
+                This apps aims to solve that problem, supplying the 3D navigation and the AR and VR support for the
+                already created 3D model.`,
 
             `Arquitetos costuma ter expertise em modelagem 3D, mas os softwares que usam para construir seus modelos geralmente
-            não têm suporte para uma fácil navegação pelo modelo nem para realidade virtual ou aumentada. Esse aplicativo tem por
-            objetivo resolver esse problema, fornecendo navegação 3D e suporte a RA e RV para modelos 3D já criados.`
+                não têm suporte para uma fácil navegação pelo modelo nem para realidade virtual ou aumentada. Esse aplicativo tem por
+                objetivo resolver esse problema, fornecendo navegação 3D e suporte a RA e RV para modelos 3D já criados.`
         );
 
         TRANSLATION.add(
@@ -240,27 +242,27 @@
             '#warning-fiducial',
             `You must print a fiducial marker to use Augmented Reality mode (<a href="data/markers/hiro.png" target="_blank">click here</a> to download).`,
             `É nescessário imprimir o marcador fiduciário para usar o modo de Realidade Aumentada (<a href="data/markers/hiro.png" target="_blank">
-            Clique aqui</a> par baixar).`
+                Clique aqui</a> par baixar).`
         );
 
         TRANSLATION.add(
             '#warning-hmd-1',
-            `In order to fully experiece the VR mode, it is required one HMD (head-mounted display) and one joystick even though it is possible to use the 
-            app without those equipments.`,
-            `Para uma experiência completa no modo RV, é nescessário um HMD (head-mounted display, ou capacete de visualização em português) e um controle 
-            joystick, apesar de ser possível usar o aplicativo sem esses equipamentos.`
+            `In order to fully experiece the VR mode, it is required one HMD (head-mounted display) and one joystick even though it is possible to use the
+                app without those equipments.`,
+            `Para uma experiência completa no modo RV, é nescessário um HMD (head-mounted display, ou capacete de visualização em português) e um controle
+                joystick, apesar de ser possível usar o aplicativo sem esses equipamentos.`
         )
 
         TRANSLATION.add(
             '#warning-hmd-2',
             `Using mobile devices, press the VR button in bottom right conner before inserting your device in the
-            HMD. A circle will move as you look around and you can teleport to that circle pressing any joystick
-            button. Alternatively, it is also possible to teleport pressisng the spacebar or touching the screen
-            if your device is sensitive to touch.`,
-            `Quando usando um dispositivo móvel, aperte o botão "VR" no canto inferior direito da tela antes de inserir seu dispositivo no HMD. 
-            Um círculo irá aparecer no chão quando pressionar algum botão do controle joystick e você irá ser teleportado para o círculo ao soltar o botão. 
-            Alternativamente, também é possível se teleportar pressionado a barra de espaço caso esteja usando teclado, tocando na tela se seu dispositivo
-            for sensível ao toque.`
+                HMD. A circle will move as you look around and you can teleport to that circle pressing any joystick
+                button. Alternatively, it is also possible to teleport pressisng the spacebar or touching the screen
+                if your device is sensitive to touch.`,
+            `Quando usando um dispositivo móvel, aperte o botão "VR" no canto inferior direito da tela antes de inserir seu dispositivo no HMD.
+                Um círculo irá aparecer no chão quando pressionar algum botão do controle joystick e você irá ser teleportado para o círculo ao soltar o botão.
+                Alternativamente, também é possível se teleportar pressionado a barra de espaço caso esteja usando teclado, tocando na tela se seu dispositivo
+                for sensível ao toque.`
         );
 
         TRANSLATION.add(
@@ -274,6 +276,19 @@
             'Images in Augmented and Virtual Reality',
             'Imagens em Realidade Virtual e Aumentada'
         );
+
+        TRANSLATION.add(
+            '#title',
+            'Architecture',
+            'Arquitetura'
+        );
+
+        TRANSLATION.add(
+            '#bottom',
+            'Powered by ',
+            'Distribuído por '
+        );
+
     </script>
 </body>
 
